--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
+    "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
